user-charts/admin-e/templates/network/admin-publictest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: publictest
  labels:
    app: publictest
spec:
  type: ClusterIP
  selector:
    app: publictest
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
