user-charts/admin-e/templates/network/admin-testfunc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testfunc
  labels:
    app: testfunc
spec:
  type: ClusterIP
  selector:
    app: testfunc
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
