user-charts/admin-e/templates/network/admin-y-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: y
  labels:
    app: y
spec:
  type: ClusterIP
  selector:
    app: y
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
