user-charts/admin-e/templates/network/admin-nginx-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  annotations:
    caplatform.dpdns.org/public: "true"
spec:
  parentRefs:
    - name: e-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "ee.192.168.100.250.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
