user-charts/admin-e/templates/network/admin-publictest-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: publictest
spec:
  parentRefs:
    - name: e-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "publictest.192.168.100.250.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: publictest
          port: 80
