user-charts/admin-e/templates/network/admin-y-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: y
spec:
  parentRefs:
    - name: e-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "y.192.168.100.250.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: y
          port: 80
